--- a/vtg.html
+++ b/vtg.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="utf-8">
+<meta name="viewport" width="device-width,initial-scale=1">
 <title>Virtual Tech Gurus</title>
+<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="container">
+<div class="jumbotron">
 <h1>Virtual Tech Gurus</h1>
+</div>
+</div>
 </body>
 </html>
